--- a/VBBank/pom.xml
+++ b/VBBank/pom.xml
@@ -28,5 +28,10 @@
     	<artifactId>jackson-datatype-jsr310</artifactId>
     	<version>2.20.0</version>
 	</dependency>
+	<dependency>
+  		<groupId>com.fasterxml.jackson.dataformat</groupId>
+  		<artifactId>jackson-dataformat-xml</artifactId>
+  		<version>2.19.0</version>
+	</dependency>
   </dependencies>
 </project>
