--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,10 @@
   		<artifactId>jackson-dataformat-xml</artifactId>
   		<version>2.19.0</version>
 	</dependency>
+	<dependency>
+	    <groupId>net.datafaker</groupId>
+	    <artifactId>datafaker</artifactId>
+	    <version>2.5.0</version>
+	</dependency>
   </dependencies>
 </project>
